--- a/1.1/pom.xml
+++ b/1.1/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poly</groupId>
   <artifactId>ntkcbt</artifactId>
-  <version>1.1</version>
+  <version>1.0</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -29,4 +29,26 @@
             <url>https://cboost.jfrog.io/artifactory/chartboost-ads/</url>
         </repository>
     </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>com.chartboost</groupId>
+      <artifactId>chartboost-sdk</artifactId>
+      <version>9.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.android.gms</groupId>
+      <artifactId>play-services-base</artifactId>
+      <version>18.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.android.gms</groupId>
+      <artifactId>play-services-ads-identifier</artifactId>
+      <version>18.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.jiuzehk</groupId>
+      <artifactId>ntkifs</artifactId>
+      <version>1.2</version>
+    </dependency>
+  </dependencies>
 </project>
